--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,12 +4,12 @@
     <base href="./" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>HappybourBackEnd</title>
+    <title>HappybourBack</title>
     <meta name="description" content="">
     <meta name="google" value="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="logoaa.png" />
     <link rel="manifest" href="manifest.webapp" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
